	* nsd/server.c: Remove unused 'spath' variable.
	* nsd/sls.c: Remove redundant comparison for < 0 on unsigned variable.
	* nsd/tclcmds.c: Add missing struct initialisers.
	* nsproxy/nsproxylib.c: Fix confusion about return values from Eval(),
	Wait() and Send(). Eval() always returns a Tcl error code, the others
	always return proxy Err codes. Remove unused variable 'incr' from
	Wait().

2007-10-13  Stephen Deasey  <sdeasey@deasey>

	* nsd/dstring.c: Use va_copy() before calling vsnprintf() so that it
	doesn't clobber our original va_list.

	* include/ns.h:
	* include/nsthread.h:
	* include/Makefile.global.in:
	* include/Makefile.module.in:
	* nsd/Makefile:
	* nsd/init.c:
	* nsd/nsmain.c:
	* nsd/nswin32.c:
	* nsproxy/nsproxy.h:
	* nsproxy/nsproxylib.c:
	* nsproxy/nsproxymod.c:
	* nsthread/Makefile:
	* nsthread/nsthreadtest.c:
	* nsthread/pthread.c: Abandon the old module LIBINIT system of
	redefining the initialisation function to _init(). The loadable module
	_init scheme was only supported by gcc, and support was dropped a long
	time ago. Unfortunately, the _init() functions were clashing with other
	libraries, such as libgcc_s.

	New scheme: shared libraries explicitly export a Nswhateva_LibInit(), and
	programs and other libraries which depend on it call it during their own
	initialisation.

	* configure.in:
	* m4/tcl.m4: Update to latest (3.6) tcl.m4.

	* nsd/log.c:
	* nsd/tclfile.c: Quieten some compiler warnings.

2007-10-12  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/tclcmds.c:
	* nsd/tclconf.c: Convert to Tcl obj based commands. Clean up option
	parsing. Catch type errors from config values. Add -min and -max options
	for int types.

	* tests/test.nscfg:
	* tests/ns_config.man: Add new config tests.

	* doc/src/ns_config.man:
	* doc/src/ns_configsection.man:
	* doc/src/ns_configsections.man:
	* doc/src/ns_section.man:
	* doc/src/ns_param.man:
	* doc/src/admin-config.man: Deleted.
	* doc/src/mann/ns_config.man: Add new consolidated config man page.
